--- a/routes/views/login.ejs
+++ b/routes/views/login.ejs
@@ -3,8 +3,8 @@
   <head>
     <title></title>
   </head>
-  <body>
-<form method="POST" action="/login">
+  <body bgcolor="#12B9F3">
+<form method="POST" action="login">
 Username: <input type="text" name="username">
 Password: <input type="password" name="password">
 <input type="submit" value="Login">
